# compile_lexer

./: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  test_input.c
